# rfchameleon-fw

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
app/: CMakeLists.txt  Kconfig  cdc_acm_shell.overlay  prj.conf  sysbuild.conf  version.h.in
app/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  rfccc1101.conf  rfccc1101.overlay
app/src/: CMakeLists.txt  Kconfig  board.c  board.h  gadget.c  gadget.h  main.c  radio.c  radio.h  stm32_bootloader.c  transport.c  transport.h
app/src/include/: gadget.h  radio.h  stm32_bootloader.h  transport.h  uuids.h
app/src/radio/: cc1101.c  cc1101_presets.c  cc1101_presets.h  test.c
app/src/transport/: gadget.c  transport.c
app/sysbuild/mcuboot/: prj.conf
app/sysbuild/mcuboot/boards/: rfccc1101.conf  rfccc1101.overlay
blinkyapp/: CMakeLists.txt  Kconfig  prj.conf
blinkyapp/boards/: rfccc1101.overlay
blinkyapp/src/: CMakeLists.txt  main.c
boards/arm/rfccc1101/: Kconfig.board  Kconfig.defconfig  board.cmake  rfccc1101.dts  rfccc1101_defconfig
boards/arm/rfccc1101/support/: openocd.cfg
drivers/: CMakeLists.txt  Kconfig
drivers/cc1101/: CMakeLists.txt  Kconfig  cc1101.c
dts/bindings/: ti,cc1101.yaml
include/radio/: cc1101.h
zephyr/: module.yml
